--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "no-console": 0,
     "comma-dangle": 0,
     "object-curly-newline": 0,
-    "arrow-parens": 0
+    "arrow-parens": 0,
+    "no-restricted-globals": 0
   }
 }
