--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,9 @@
     "comma-dangle": 0,
     "object-curly-newline": 0,
     "arrow-parens": 0,
-    "no-restricted-globals": 0
+    "no-restricted-globals": 0,
+    "no-plusplus": 0,
+    "no-mixed-operators": 0,
+    "global-require": 0
   }
 }
